--- a/_posts/2016-10-15-JNI-CPP.md
+++ b/_posts/2016-10-15-JNI-CPP.md
@@ -1,8 +1,7 @@
 ---
 layout: post
 title: Mapping Java to C++ classes with JNI.
-category: JNI
-tags: JNI, Java, C++
+tags: [java, JNI, C++]
 ---
 
 Hi everybody. At this I will explain how to map some C++ class to Java using
