--- a/_posts/2016-10-31-JNI-Cache.md
+++ b/_posts/2016-10-31-JNI-Cache.md
@@ -1,8 +1,7 @@
 ---
 layout: post
 title:  JNI tunning lookups by caching
-category: JNI
-tags: java, JNI, c, linux, programming
+tags: [java, JNI, tunning, C++]
 ---
 
 Doing class, method and field lookups can slow down the execution time of your
